--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 	<a href="krishna.html"><input type="submit" value="submit"/></a>
 	</fieldset>
 	</form></center>
+	<img src="img1.jpg" width="50%">
+	<img src="imp2.jpg" width="50%">
+	<img src="img3.jpg" width="50%">
 </body
 </html>
